--- a/web/src/index.css
+++ b/web/src/index.css
@@ -12,7 +12,7 @@ code {
 }
 
 .main-content {
-    padding: 16px;
+    padding: 4px;
 }
 
 .small-icon .icon {
@@ -21,4 +21,10 @@ code {
 
 .custom-footer {
     font-size: 1.1em;
+}
+
+@media only screen and (max-width: 600px) {
+    .hide-on-mobile {
+        display: none !important;
+    }
 }
